--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,6 +42,139 @@ import SiteLayout from '../layouts/Layout.astro';
         </div>
     </div>
     <style>
+    /* MOBILE 
+	---------------------------------------------------------------------
+	*/
+    body {
+            text-align: center;
+            font-size: 40px;
+            margin: 0px;
+            overflow:scroll
+        }
+
+        .login {
+            height: 100vh;
+        }
+
+        .LetsConnect {
+            padding-top: 0.7em;
+            padding-bottom: 0em;
+            margin-top: 0em;
+        }
+
+        .LP {
+            margin-block-start: 0em;
+            margin-block-end: 0em;
+            font-size: 48px;
+            font-size: 0.5em;
+            margin-bottom: 0em;
+
+        }
+
+        .Logo {
+            width: 15vh;
+		    object-fit: cover;
+            margin-bottom: 0em;
+        }
+
+        .Connect {
+            margin-top: 0em;
+            text-decoration: underline;
+        }
+
+        .Pass {
+            color: black;
+        }
+
+        .Click {
+            color: white;
+            text-decoration: none;
+        }
+
+        .BoxUnder {
+            margin-top: 0em;
+            border-radius: 15px;
+            background: rgba(255, 255, 255, 0); 
+            width: 10em;
+            height: auto;
+            margin: auto;
+        }
+
+        .Email{
+            width: 260px;
+            height: 40px;
+            flex-shrink: 0;
+            opacity: 0.6;
+            border: 1px solid #F6F6F6;
+            background: #FFFEFE;
+            box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+            border-radius: 3px;
+            color: black;
+            font-weight: bold;
+
+        }
+
+        .Password{
+            width: 260px;
+            height: 40px;
+            flex-shrink: 0;
+            opacity: 0.6;
+            border: 1px solid #F6F6F6;
+            background: #FFFEFE;
+            box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+            border-radius: 3px;
+            color: black;
+            font-weight: bold;
+        }
+
+        .ForgotPass {
+            font-size: 12px;
+            padding-left: 13em;
+        }
+
+        .LoginButt {
+            
+            color: #3EB489;
+            font-size: 32px;
+            font-weight: 400;
+            font-family: Staatliches;
+            border-radius: 25px;
+            background: #FAF6F6;
+            box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+            width: 313px;
+            height: 60px;
+            border: 1px solid #f6f6f600;
+            cursor: pointer;
+		    transition-duration: 0.4s;
+        }
+
+        .LoginButt:hover {
+            background: #3eb489;
+            color: white;
+        }
+
+        .PButt {
+            padding-top: 0em;
+            padding-bottom: 0em;
+        }
+
+        .SignUp {
+            color: white;
+            text-decoration: underline;
+            
+        }
+
+        .WTC {
+            font-size: 16px;
+            padding-bottom: 2.3em;
+        }
+        
+
+    /* DESKTOP 
+	------------------------------------------------------------------------
+	*/
+
+
     @media (min-width: 75em){
 
         body {
