--- a/src/pages/MainPage.astro
+++ b/src/pages/MainPage.astro
@@ -1,8 +1,9 @@
 ---
 import SiteLayout from '../layouts/Layout.astro';
+
 ---
 <SiteLayout>
-
+<div id="tsparticles"></div>
 <div class="content">
 	<div class="NATUNDER">
 	<img src="./src/Img/Placeholders/Placeholder.png" class="Image"/>
