--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Bubbles from '../components/Bubbles.astro';
 import SiteLayout from '../layouts/Layout.astro';
 ---
 
@@ -41,6 +42,7 @@ import SiteLayout from '../layouts/Layout.astro';
             </p>
         </div>
     </div>
+    <Bubbles />
     <style>
     /* MOBILE 
 	---------------------------------------------------------------------
