Mobile application design changes + added files

--- a/src/components/Bubbles.astro
+++ b/src/components/Bubbles.astro
@@ -1,4 +1,4 @@
-
+<footer>
 <section class="sticky">
   <div class="bubbles">
       <div class="bubble"></div>
@@ -14,7 +14,7 @@
     
   </div>
 </section>
-
+</footer>
 <style>
   body,html{
 width:100%;
