--- a/src/pages/Settings.astro
+++ b/src/pages/Settings.astro
@@ -62,13 +62,20 @@ p {
     color: black;
 }
 
+.title {
+            color: white;
+            font-size: 2em;
+            margin: 1em;
+        }
+
 .Content {
-    height: 75vh;
+    height: 65vh;
     width: 80vw;
     background: rgba(255, 253.94, 253.94, 0.80); 
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); 
     border-radius: 3px; 
-    padding: 1em;
+    padding: 5em;
+    margin-top: 3em;
     position: absolute;
     top: 50%;
     left: 50%;
